src/tests/cases/snapshots/bandwhich__tests__cases__ui__basic_only_addresses.snap
---
source: src/tests/cases/ui.rs
expression: terminal_draw_events.lock().unwrap().deref()
---
[
    " Total Up / Down: 0Bps / 0Bps                                                                                                                                                                 \n┌Utilization by remote address───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐\n│Remote Address                                                                                                        Connections                   Up / Down                               │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘\n Press <SPACE> to pause. Use <TAB> to rearrange tables. (DNS queries hidden).                                                                                                                 \n",
]
