src/tests/cases/snapshots/bandwhich__tests__cases__ui__basic_only_processes.snap
---
source: src/tests/cases/ui.rs
expression: terminal_draw_events.lock().unwrap().join(SNAPSHOT_SECTION_SEPARATOR)
---
 Total Up / Down: 0Bps / 0Bps                                                                                                                                                                 
┌Utilization by process name─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Process                                                                                               Connections                    Up / Down                                              │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Press <SPACE> to pause. Use <TAB> to rearrange tables. (DNS queries hidden).                                                                                                                 

