src/tests/cases/snapshots/bandwhich__tests__cases__ui__basic_processes_with_dns_queries.snap
---
source: src/tests/cases/ui.rs
expression: terminal_draw_events.lock().unwrap().deref()
---
[
    " Total Up / Down: 0Bps / 0Bps                                                                                                                                                                 \n┌Utilization by process name─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐\n│Process                                                                       Connections                                       Up / Down                                                   │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n│                                                                                                                                                                                            │\n└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘\n Press <SPACE> to pause. Use <TAB> to rearrange tables. (DNS queries shown).                                                                                                                  \n",
]
