src/tests/cases/snapshots/bandwhich__tests__cases__ui__basic_startup-2.snap
---
source: src/tests/cases/ui.rs
expression: terminal_events.lock().unwrap().as_slice()
---
[
    Clear,
    HideCursor,
    Draw,
    HideCursor,
    Flush,
    ShowCursor,
]
